<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearParte1"
        android:layout_width="match_parent"
        android:layout_height="463dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="475dp"
            android:background="@drawable/blue_bg">

            <ImageView
                android:layout_width="304dp"
                android:layout_height="279dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="55dp"
                android:src="@drawable/logoaprorez" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:gravity="center|center_horizontal"
            android:text="@string/label_bienvenida"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte3"
        android:layout_width="524dp"
        android:layout_height="154dp"
        android:layout_below="@+id/linearParte2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:backgroundTint="#BFDEED"
            android:baselineAligned="false"
            android:hint="@string/label_usuario"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded"
                android:backgroundTint="#BFDEED"
                android:fontFamily="@font/poppins_medium"


                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:backgroundTint="#BFDEED"

            android:hint="@string/label_password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded"
                android:backgroundTint="#BFDEED"

                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte3"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:drawableEnd="@drawable/ic_login"
            android:drawableTint="#fff"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/label_start_session" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte4"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:gravity="center|center_horizontal"
            android:text="@string/label_nuevoUser"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte5"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/san_francisco"
            android:gravity="center|center_horizontal"
            android:text="@string/label_olvide_password"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>